PrintLease 복합기 리스 웹사이트 완성 - 모든 페이지 현지화 및 제품 라인업 다양화

--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
