--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
@@ -101,7 +101,7 @@
 									</svg>
 								</div> <!-- /.icon -->
 								<div class="service-contents">
-									<p>서울시 강남구 테크로 123 (본사)</p>
+									<p>경기도 성남시 대왕판교로 123 (본사)</p>
 								</div> <!-- /.service-contents-->
 							</div> <!-- /.service -->
 						</div>
