--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
@@ -236,9 +236,9 @@
 								<img src="images/product-1.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Nordic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>A4 컬러 복합기</h3>
+								<p>고품질 컬러 출력과 다양한 기능을 제공하는 올인원 솔루션 </p>
+								<p><a href="shop.html">자세히 보기</a></p>
 							</div>
 						</div>
 					</div>
@@ -249,9 +249,9 @@
 								<img src="images/product-2.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Kruzo Aero Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>고속 흑백 복사기</h3>
+								<p>대용량 출력에 최적화된 고속 처리 성능의 비즈니스 모델 </p>
+								<p><a href="shop.html">자세히 보기</a></p>
 							</div>
 						</div>
 					</div>
@@ -262,9 +262,9 @@
 								<img src="images/product-3.png" alt="Image" class="img-fluid">
 							</div>
 							<div class="pt-3">
-								<h3>Ergonomic Chair</h3>
-								<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio </p>
-								<p><a href="#">Read More</a></p>
+								<h3>A3 대형 복합기</h3>
+								<p>대형 문서와 도면 출력에 최적화된 기업용 프리미엄 모델 </p>
+								<p><a href="shop.html">자세히 보기</a></p>
 							</div>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-7 mx-auto text-center">
-				<h2 class="section-title">추천사</h2>
+				<h2 class="section-title">고객 후기</h2>
 			</div>
 		</div>
 
@@ -491,9 +491,9 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="shop.html">A4 컬러 복합기</a></li>
+									<li><a href="shop.html">고속 흑백 복사기</a></li>
+									<li><a href="shop.html">A3 대형 복합기</a></li>
 								</ul>
 							</div>
 						</div>
