--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
@@ -13,24 +13,24 @@
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+  <meta name="description" content="복합기 리스 전문 쇼핑몰 - A4 컬러, 고속 흑백, 친환경 토너 솔루션 등 다양한 MFP 모델" />
+  <meta name="keywords" content="복합기 리스, MFP 쇼핑, 프린터 임대" />
 
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>PrintLease Shop - 복합기 리스 전문 쇼핑몰</title>
 	</head>
 
 	<body>
 
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="PrintLease navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+				<a class="navbar-brand" href="index.html">PrintLease<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -64,7 +64,8 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Shop</h1>
+								<h1>복합기 쇼핑</h1>
+								<p class="mb-4">기업 규모와 출력량에 맞는 최적의 복합기 리스 모델을 선택하세요.</p>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -83,10 +84,10 @@
 
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-1.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">A4 컬러 복합기</h3>
+							<strong class="product-price">월 49,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -97,10 +98,10 @@
 						
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-2.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">고속 흑백 복사기</h3>
+							<strong class="product-price">월 39,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -111,10 +112,10 @@
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-3.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">친환경 토너 솔루션</h3>
+							<strong class="product-price">월 29,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -125,10 +126,10 @@
 
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-4.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">A3 대형 복합기</h3>
+							<strong class="product-price">월 69,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -138,61 +139,61 @@
 					<!-- End Column 4 -->
 
 
-					<!-- Start Column 1 -->
+					<!-- Start Column 5 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-5.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">컴팩트 사무실용 MFP</h3>
+							<strong class="product-price">월 35,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
-					<!-- End Column 1 -->
+					<!-- End Column 5 -->
 						
-					<!-- Start Column 2 -->
+					<!-- Start Column 6 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+						<a class="product-item" href="cart.html">
+							<img src="images/product-6.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">프리미엄 컬러 레이저</h3>
+							<strong class="product-price">월 59,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
-					<!-- End Column 2 -->
+					<!-- End Column 6 -->
 
-					<!-- Start Column 3 -->
+					<!-- Start Column 7 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
+						<a class="product-item" href="cart.html">
+							<img src="images/product-1.png" class="img-fluid product-thumbnail">
+							<h3 class="product-title">고속 스캔 전용기</h3>
+							<strong class="product-price">월 25,000원~</strong>
+
+							<span class="icon-cross">
+								<img src="images/cross.svg" class="img-fluid">
+							</span>
+						</a>
+					</div>
+					<!-- End Column 7 -->
+
+					<!-- Start Column 8 -->
+					<div class="col-12 col-md-4 col-lg-3 mb-5">
+						<a class="product-item" href="cart.html">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<h3 class="product-title">원격 관리 서비스</h3>
+							<strong class="product-price">월 15,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div>
-					<!-- End Column 3 -->
-
-					<!-- Start Column 4 -->
-					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
-							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-					<!-- End Column 4 -->
+					<!-- End Column 8 -->
 
 		      	</div>
 		    </div>
@@ -232,8 +233,8 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">PrintLease<span>.</span></a></div>
+						<p class="mb-4">최신 복합기 리스 솔루션으로 출력 환경을 효율화하세요. 설치·관리·소모품을 통합 지원합니다.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
@@ -247,35 +248,35 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
+									<li><a href="about.html">회사 소개</a></li>
+									<li><a href="services.html">서비스</a></li>
+									<li><a href="blog.html">블로그</a></li>
+									<li><a href="contact.html">문의하기</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Knowledge base</a></li>
-									<li><a href="#">Live chat</a></li>
+									<li><a href="#">기술 지원</a></li>
+									<li><a href="#">지식 베이스</a></li>
+									<li><a href="#">라이브 채팅</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
+									<li><a href="#">채용</a></li>
+									<li><a href="#">팀</a></li>
+									<li><a href="#">리더십</a></li>
+									<li><a href="#">개인정보 처리방침</a></li>
 								</ul>
 							</div>
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="#">A4 컬러 복합기</a></li>
+									<li><a href="#">고속 흑백 복사기</a></li>
+									<li><a href="#">친환경 토너 솔루션</a></li>
 								</ul>
 							</div>
 						</div>
