--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
@@ -167,7 +167,7 @@
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 						<img src="images/person_2.jpg" class="img-fluid mb-5" alt="Jeremy Walker">
 
-						<h3 clas><a href="#"><span class="">Jeremy</span> Walker</a></h3>
+						<h3 clas><a href="#"><span class="">최태원</span> 부장</a></h3>
             <span class="d-block position mb-4">Technical Support Lead</span>
             <p>원격 모니터링과 신속한 현장 대응으로 다운타임을 최소화합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
@@ -178,7 +178,7 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 						<img src="images/person_3.jpg" class="img-fluid mb-5" alt="Patrik White">
-						<h3 clas><a href="#"><span class="">Patrik</span> White</a></h3>
+						<h3 clas><a href="#"><span class="">정의선</span> 차장</a></h3>
             <span class="d-block position mb-4">Supply Chain Manager</span>
             <p>토너 및 부품 재고를 예측 관리해 중단 없는 출력 환경을 보장합니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
@@ -189,7 +189,7 @@
 					<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 						<img src="images/person_4.jpg" class="img-fluid mb-5" alt="Kathryn Ryan">
 
-						<h3 clas><a href="#"><span class="">Kathryn</span> Ryan</a></h3>
+						<h3 clas><a href="#"><span class="">이부진</span> 과장</a></h3>
             <span class="d-block position mb-4">Customer Success Manager</span>
             <p>사용 패턴 분석 리포트를 제공해 비용 효율과 업무 생산성을 향상시킵니다.</p>
             <p class="mb-0"><a href="#" class="more dark">Learn More <span class="icon-arrow_forward"></span></a></p>
@@ -303,7 +303,7 @@
 		<!-- Start Footer Section -->
 		<footer class="footer-section">
 			<div class="container relative">
-
+				
 				<div class="sofa-img">
 					<img src="images/sofa.png" alt="Image" class="img-fluid">
 				</div>
