--- a/services.html
+++ b/services.html
@@ -1,6 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
+* Template Name: PrintLease
 * Template Author: Untree.co
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
@@ -172,10 +172,10 @@
 
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
+						<a class="product-item" href="shop.html">
 							<img src="images/product-1.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Nordic Chair</h3>
-							<strong class="product-price">$50.00</strong>
+							<h3 class="product-title">A4 컬러 복합기</h3>
+							<strong class="product-price">월 49,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -186,10 +186,10 @@
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
+						<a class="product-item" href="shop.html">
 							<img src="images/product-2.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Kruzo Aero Chair</h3>
-							<strong class="product-price">$78.00</strong>
+							<h3 class="product-title">고속 흑백 복사기</h3>
+							<strong class="product-price">월 39,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -200,10 +200,10 @@
 
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
+						<a class="product-item" href="shop.html">
 							<img src="images/product-3.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Ergonomic Chair</h3>
-							<strong class="product-price">$43.00</strong>
+							<h3 class="product-title">A3 대형 복합기</h3>
+							<strong class="product-price">월 69,000원~</strong>
 
 							<span class="icon-cross">
 								<img src="images/cross.svg" class="img-fluid">
@@ -221,7 +221,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-7 mx-auto text-center">
-				<h2 class="section-title">추천사</h2>
+				<h2 class="section-title">고객 후기</h2>
 			</div>
 		</div>
 
