feat: update all HTML pages (branding, blog, products, testimonials)

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 mx-auto text-center">
-						<h2 class="section-title">추천사</h2>
+						<h2 class="section-title">고객 후기</h2>
 					</div>
 				</div>
 
@@ -233,9 +233,9 @@
 												</blockquote>
 												<div class="author-info">
 													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+														<img src="images/person-1.png" alt="김수진" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Maria Jones</h3>
+													<h3 class="font-weight-bold">김승연</h3>
 													<span class="position d-block mb-3">운영팀장, XYZ Inc.</span>
 												</div>
 											</div>
@@ -256,9 +256,9 @@
 
 												<div class="author-info">
 													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+														<img src="images/person-1.png" alt="이해진" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">David Lee</h3>
+													<h3 class="font-weight-bold">이해진</h3>
 													<span class="position d-block mb-3">재무팀, Alpha Corp.</span>
 												</div>
 											</div>
@@ -279,9 +279,9 @@
 
 												<div class="author-info">
 													<div class="author-pic">
-														<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+														<img src="images/person-1.png" alt="정용진" class="img-fluid">
 													</div>
-													<h3 class="font-weight-bold">Soojin Park</h3>
+													<h3 class="font-weight-bold">정용진</h3>
 													<span class="position d-block mb-3">IT 매니저, Delta Solutions</span>
 												</div>
 											</div>
@@ -374,9 +374,9 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">A4 Color MFP</a></li>
-									<li><a href="#">High-Speed Copier</a></li>
-									<li><a href="#">Eco Toner Solution</a></li>
+									<li><a href="#">A4 컬러 복합기</a></li>
+									<li><a href="#">고속 흑백 복사기</a></li>
+									<li><a href="#">친환경 토너 솔루션</a></li>
 								</ul>
 							</div>
 						</div>
