--- a/checkout.html
+++ b/checkout.html
@@ -13,24 +13,24 @@
   <meta name="author" content="Untree.co">
   <link rel="shortcut icon" href="favicon.png">
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+  <meta name="description" content="PrintLease 복합기 리스 주문 결제 - 선택한 복합기 제품의 리스 계약을 완료하세요. 안전한 결제 시스템으로 A4 컬러 복합기, 고속 흑백 복사기 등 MFP 리스 서비스를 간편하게 신청할 수 있습니다. 월 사용료 기반의 투명한 요금제로 복합기를 이용하세요." />
+  <meta name="keywords" content="복합기 리스, MFP 주문, 프린터 임대 신청, 복합기 장바구니, PrintLease 주문, 사무기기 리스, 복합기 월 사용료, A4 컬러 복합기, 고속 흑백 복사기, 친환경 토너" />
 
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+		<title>Print Free Bootstrap 5 Template for PrintLease and Interior Design Websites by Untree.co </title>
 	</head>
 
 	<body>
 
 		<!-- Start Header/Navigation -->
-		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="PrintLease navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Furni<span>.</span></a>
+				<a class="navbar-brand" href="index.html">PrintLease<span>.</span></a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -376,8 +376,8 @@
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-						<p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant</p>
+						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">PrintLease<span>.</span></a></div>
+						<p class="mb-4">집이나 사무실에서 사용할 수 있는 다기능 프린터(MFP) 리스 전문 기업입니다. 인쇄·스캔·복사·팩스를 하나로 통합한 최신 장비를 초기 비용 없이 월 사용료로 운용하며 설치, 원격 모니터링, 소모품 자동 공급까지 One-Stop으로 제공합니다.</p>
 
 						<ul class="list-unstyled custom-social">
 							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
@@ -417,9 +417,9 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									<li><a href="#">A4 컬러 복합기</a></li>
+									<li><a href="#">고속 흑백 복사기</a></li>
+									<li><a href="#">친환경 토너 솔루션</a></li>
 								</ul>
 							</div>
 						</div>
