--- a/contact.html
+++ b/contact.html
@@ -247,9 +247,9 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">A4 Color MFP</a></li>
-									<li><a href="#">High-Speed Copier</a></li>
-									<li><a href="#">Eco Toner Solution</a></li>
+									<li><a href="#">A4 컬러 복합기</a></li>
+									<li><a href="#">고속 흑백 복사기</a></li>
+									<li><a href="#">친환경 토너 솔루션</a></li>
 								</ul>
 							</div>
 						</div>
