--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
+												<img src="images/person-1.png" alt="김승연" class="img-fluid">
 											</div>
-											<h3 class="font-weight-bold">Maria Jones</h3>
+											<h3 class="font-weight-bold">김승연</h3>
 											<span class="position d-block mb-3">운영팀장, XYZ Inc.</span>
 										</div>
 									</div>
@@ -329,9 +329,9 @@
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="David Lee" class="img-fluid">
+												<img src="images/person-1.png" alt="이해진" class="img-fluid">
 											</div>
-											<h3 class="font-weight-bold">David Lee</h3>
+											<h3 class="font-weight-bold">이해진</h3>
 											<span class="position d-block mb-3">재무팀, Alpha Corp.</span>
 										</div>
 									</div>
@@ -352,9 +352,9 @@
 
 										<div class="author-info">
 											<div class="author-pic">
-												<img src="images/person-1.png" alt="Soojin Park" class="img-fluid">
+												<img src="images/person-1.png" alt="정용진" class="img-fluid">
 											</div>
-											<h3 class="font-weight-bold">Soojin Park</h3>
+											<h3 class="font-weight-bold">정용진</h3>
 											<span class="position d-block mb-3">IT 매니저, Delta Solutions</span>
 										</div>
 									</div>
@@ -493,7 +493,7 @@
 								<ul class="list-unstyled">
 									<li><a href="shop.html">A4 컬러 복합기</a></li>
 									<li><a href="shop.html">고속 흑백 복사기</a></li>
-									<li><a href="shop.html">A3 대형 복합기</a></li>
+									<li><a href="shop.html">친환경 토너 솔루션</a></li>
 								</ul>
 							</div>
 						</div>
